@@ -480,7 +480,7 @@
 		{ "key": "forkedRoad1_2_res", "value": "This has to be the right path. You're almost sure of it." },
 		{ "key": "forkedRoad1_3_res", "value": "\"Was this the way we came? Did we even come this way?\"" },
 		{ "key": "forkedRoadHard0_0_res", "value": "As luck would have it, the left road was far less steep.\nShould speed things up a bit." },
-		{ "key": "forkedRoadHard0_1_res", "value": "It takes a while before you remember the current road being the wrong one. While unlucky, its better to backtrack sooner than later." },
+		{ "key": "forkedRoadHard0_1_res", "value": "After a while, you remember the current road is the wrong one.\nWhile unlucky, its better to backtrack sooner than later." },
 		{ "key": "forkedRoadHard0_2_res", "value": "Just keep walking. You'll get somewhere eventually." },
 		{ "key": "forkedRoadHard1_0_res", "value": "\"I think I remember us coming over here.\nYou made fun of me for being out of breath.\"" },
 		{ "key": "forkedRoadHard1_1_res", "value": "Flaytz looks confused. \"Nothing about this road feels familiar.\nThen again, no part of a wasteland feels familiar.\"" },
@@ -888,10 +888,10 @@
 		{ "key": "vampiricMail_skill_des", "value": "Enemies that attack you have a 50% chance to bleed for 2 turns" },
 		{ "key": "thunderousAnger_skill_title", "value": "Thunderous Anger" },
 		{ "key": "thunderousAnger_skill_sub", "value": "Passive" },
-		{ "key": "thunderousAnger_skill_des", "value": "Every 4 turns, shock all enemies for 2 turns" },
+		{ "key": "thunderousAnger_skill_des", "value": "At the start of every 3rd turn, shock all enemies for 1 turn" },
 		{ "key": "timelessBlade_skill_title", "value": "Timeless Blade" },
 		{ "key": "timelessBlade_skill_sub", "value": "Upgrades Bash" },
-		{ "key": "timelessBlade_skill_des", "value": "The legendary sword technique of Umaria's knights" },
+		{ "key": "timelessBlade_skill_des", "value": "A legendary sword technique, forever the pride of Umaria's knights" },
 		{ "key": "frost_skill_title", "value": "Frost" },
 		{ "key": "frost_skill_sub", "value": "Active" },
 		{ "key": "frost_skill_des", "value": "Weak magical attack with a decent chance\nto freeze" },
@@ -969,7 +969,7 @@
 		{ "key": "killerInstinct_skill_des", "value": "Increase critical hit damage by a flat 50%" },		
 		{ "key": "ritualDaggers_skill_title", "value": "Ritual Daggers" },
 		{ "key": "ritualDaggers_skill_sub", "value": "Passive" },
-		{ "key": "ritualDaggers_skill_des", "value": "Increase MATK by 100%, but your attack costs are doubled" },
+		{ "key": "ritualDaggers_skill_des", "value": "Increase MATK by 100%, but your attacks cost 150% more" },
 		{ "key": "angelsMercy_skill_title", "value": "Angel's Mercy" },
 		{ "key": "angelsMercy_skill_sub", "value": "Active" },
 		{ "key": "angelsMercy_skill_des", "value": "Make a party member almost invincible for\n2 turns" },
@@ -979,7 +979,7 @@
 		{ "key": "burn_description", "value": "Taking 30% of caster's MATK as magic damage at the end of its turn" },
 		{ "key": "poison_title", "value": "Poison" },
 		{ "key": "poison_sub", "value": "Debuff" },
-		{ "key": "poison_description", "value": "Losing 8% of its max HP at the end of its turn" },
+		{ "key": "poison_description", "value": "Losing 10% of its max HP at the end of its turn" },
 		{ "key": "taunt_title", "value": "Taunted" },
 		{ "key": "taunt_sub", "value": "Debuff" },
 		{ "key": "taunt_description", "value": "Has PATK increased by 50% and must attack the caster when it can" },
@@ -1025,7 +1025,7 @@
 		{ "key": "miracle_description", "value": "Has PDEF and MDEF increased by 9999" },
 		{ "key": "fatalWound_title", "value": "Fatal Wound" },
 		{ "key": "fatalWound_sub", "value": "Permanent Debuff" },
-		{ "key": "fatalWound_description", "value": "Losing 20% of its max HP at the end of its turn " },
+		{ "key": "fatalWound_description", "value": "Losing 33% of its max HP at the end of its turn " },
 		{ "key": "vampire_title", "value": "Vampire" },
 		{ "key": "vampire_sub", "value": "Buff" },
 		{ "key": "vampire_description", "value": "Has Bleed Plus (increased bleed damage)" },
@@ -1052,7 +1052,7 @@
 		{ "key": "championMDEF_description", "value": "Has MDEF increased by 50% and HP increased by 33%" },
 		{ "key": "boss_title", "value": "Boss" },
 		{ "key": "boss_sub", "value": "Permanent Buff" },
-		{ "key": "boss_description", "value": "Damage from all status effects is reduced by 50%" },
+		{ "key": "boss_description", "value": "Damage from all status effects is reduced\nby 50%" },
 
 		{ "key": "damage_description", "value": "Damage"},
 		{ "key": "HP_regen_description", "value": "HP Regen"},
@@ -1129,6 +1129,7 @@
 		{ "key": "phantomRush_attack", "value": "Phantom Rush" },
 		{ "key": "frozenTouch_attack", "value": "Frozen Touch" },
 		{ "key": "recover_attack", "value": "Recover" },
+		{ "key": "enragingHowl_attack", "value": "Enraging Howl" },
 
 		{ "key": "fireball_attack", "value": "Fireball" },
 		{ "key": "frost_attack", "value": "Frost" },
